--- a/aquarium.html
+++ b/aquarium.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="style.css" >
     <script src="main.js"></script>    
 </head>
+
 <body onload="setDate()">
     <div class="catalog">
         <div class="container">
-            <h1> CATALOGUE: BIRD TOYS </h1>
+            <h1> AQUARIUM DECORATION ORNAMENTS </h1>
             <h4 id="date"></h4>
     </div>
     <div class="line"></div>
@@ -211,12 +212,13 @@
         </div>
 
     </div>
+</div>
 
-    
+<div class="button">
 <button type="button" onclick="bird()" id="bird" > 1 </button>
 <button type="button" onclick="aquarium()" id="aquarium" > 2 </button>
 <button type="button" onclick="dog()" id="dog" > 3 </button>
 <button type="button" onclick="cat()" id="cat" > 4 </button>
-
+</div>
 </body>
 </html>
